Bug 1117585 - Disk consumption observers could get released on the cache thread, r=jduell